--- a/src/app/admin/admin-errors/admin-errors.component.html
+++ b/src/app/admin/admin-errors/admin-errors.component.html
@@ -20,7 +20,7 @@
           (click)="copyQueryToClipboard(error.sqlQueryWithParameters)"
           tooltip="Copy to clipboard (with parameters)"
         >
-          <icon>assignment</icon>
+          <bio-icon>assignment</bio-icon>
         </button>
         <pre><code [highlight]="error.sqlQuery" [languages]="['sql']"></code></pre>
       </div>
