--- a/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
+++ b/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
@@ -17,7 +17,7 @@
           #inputPassword
         />
         <button suffix bioButton icon type="button" (click)="hideOldPassword = !hideOldPassword">
-          <icon>{{ hideOldPassword ? 'visibility_off' : 'visibility' }}</icon>
+          <bio-icon>{{ hideOldPassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
         <errors>
           <error *error="'required'">Old password is required</error>
@@ -33,7 +33,7 @@
           #inputPassword
         />
         <button suffix bioButton icon type="button" (click)="hidePassword = !hidePassword">
-          <icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</icon>
+          <bio-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
         <errors>
           <error *error="'required'">New password is required</error>
@@ -50,7 +50,7 @@
           autocomplete="off"
         />
         <button suffix bioButton icon type="button" (click)="hideConfirmPassword = !hideConfirmPassword">
-          <icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</icon>
+          <bio-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
         <errors>
           <error *error="'required'">Confirm new password is required</error>
