--- a/src/app/auth/change-password/change-password/change-password.component.html
+++ b/src/app/auth/change-password/change-password/change-password.component.html
@@ -2,7 +2,7 @@
   <h3 bioCardTitle>Change password</h3>
   <bio-card-content [class.text-success]="sentEmail">
     <ng-container *ngIf="sentEmail; else emailNotSent">
-      <icon outlined>check_circle</icon>
+      <bio-icon outlined>check_circle</bio-icon>
       E-mail was sent successfully!
     </ng-container>
     <ng-template #emailNotSent>
