--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,7 +23,7 @@
           type="button"
           (click)="typePassword = typePassword === 'password' ? 'text' : 'password'"
         >
-          <icon>{{ typePassword === 'password' ? 'visibility_off' : 'visibility' }}</icon>
+          <bio-icon>{{ typePassword === 'password' ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
       </form-field>
       <bio-checkbox controlName="rememberMe"> Remember me </bio-checkbox>
