--- a/src/app/header/side-menu/side-menu.component.html
+++ b/src/app/header/side-menu/side-menu.component.html
@@ -1,10 +1,10 @@
 <bio-list selectable>
   <a bioListItem routerLink="/" (click)="onMenuSelected($event)">
-    <icon prefix>home</icon>
+    <bio-icon prefix>home</bio-icon>
     Home
   </a>
   <a bioListItem routerLink="/score/search" queryParamsHandling="preserve" (click)="onMenuSelected($event)">
-    <icon prefix>search</icon>
+    <bio-icon prefix>search</bio-icon>
     Search scores
   </a>
   <!--TODO add better Leaderboards layout to support mobile, for now it's disabled-->
@@ -15,7 +15,7 @@
     queryParamsHandling="preserve"
     (click)="onMenuSelected($event)"
   >
-    <icon prefix>leaderboard</icon>
+    <bio-icon prefix>leaderboard</bio-icon>
     Leaderboards
   </a>
   <a
@@ -25,7 +25,7 @@
     (click)="onMenuSelected($event)"
     class="world-records"
   >
-    <icon prefix [mdi]="mdiTrophy"></icon>
+    <bio-icon prefix [mdi]="mdiTrophy"></bio-icon>
     World records
   </a>
   <a
@@ -36,38 +36,38 @@
     queryParamsHandling="preserve"
     (click)="onMenuSelected($event)"
   >
-    <icon prefix>sync_alt</icon>
+    <bio-icon prefix>sync_alt</bio-icon>
     Score change requests
     <bio-badge suffix>{{ headerQuery.playerRequestChangesCount$ | async }}</bio-badge>
   </a>
   <ng-container *ngIf="user.admin">
     <a class="admin-list-item" bioListItem routerLink="/admin" (click)="onMenuSelected($event)">
-      <icon prefix>admin_panel_settings</icon>
+      <bio-icon prefix>admin_panel_settings</bio-icon>
       Admin
     </a>
     <a bioListItem routerLink="/admin/approval" queryParamsHandling="preserve" (click)="onMenuSelected($event)">
-      <icon prefix>checklist</icon>
+      <bio-icon prefix>checklist</bio-icon>
       Scores approval (Admin)
       <bio-badge suffix>{{ headerQuery.adminApprovalCount$ | async }}</bio-badge>
     </a>
     <a bioListItem routerLink="/admin/create-player" (click)="onMenuSelected($event)">
-      <icon prefix>person_add_alt_1</icon>
+      <bio-icon prefix>person_add_alt_1</bio-icon>
       Create player
     </a>
     <a bioListItem routerLink="/admin/rules" (click)="onMenuSelected($event)">
-      <icon prefix>article</icon>
+      <bio-icon prefix>article</bio-icon>
       Edit rules
     </a>
     <a bioListItem routerLink="/admin/mail-queue" (click)="onMenuSelected($event)">
-      <icon prefix [mdi]="mdiEmailSyncOutline"></icon>
+      <bio-icon prefix [mdi]="mdiEmailSyncOutline"></bio-icon>
       Mail queue
     </a>
     <a bioListItem routerLink="/admin/ban-user" (click)="onMenuSelected($event)">
-      <icon prefix [mdi]="mdiAccountLock"></icon>
+      <bio-icon prefix [mdi]="mdiAccountLock"></bio-icon>
       Ban user
     </a>
     <a bioListItem routerLink="/admin/errors" (click)="onMenuSelected($event)">
-      <icon prefix outlined>error_outline</icon>
+      <bio-icon prefix outlined>error_outline</bio-icon>
       Errors
     </a>
   </ng-container>
