--- a/src/app/player/player-change-requests/player-change-requests-action-cell/player-change-requests-action-cell.component.html
+++ b/src/app/player/player-change-requests/player-change-requests-action-cell/player-change-requests-action-cell.component.html
@@ -8,5 +8,5 @@
   [disabled]="loadingModal"
   (click)="openModalChangeRequests()"
 >
-  <icon small>sync_alt</icon>
+  <bio-icon small>sync_alt</bio-icon>
 </button>
