--- a/src/app/score/score-add/score-add.component.html
+++ b/src/app/score/score-add/score-add.component.html
@@ -73,7 +73,7 @@
             placeholder="Achieved date"
           />
           <button bioButton icon suffix [bioDatepickerTrigger]="datepicker">
-            <icon>calendar_today</icon>
+            <bio-icon>calendar_today</bio-icon>
           </button>
           <bio-datepicker #datepicker></bio-datepicker>
         </form-field>
