--- a/src/app/score/score-shared/score-approval/score-approval-actions-cell/score-approval-actions-cell.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval-actions-cell/score-approval-actions-cell.component.html
@@ -8,7 +8,7 @@
   [disabled]="loadingApprovalModal"
   type="button"
 >
-  <icon small>check</icon>
+  <bio-icon small>check</bio-icon>
 </button>
 <button
   bioButton
@@ -20,7 +20,7 @@
   [disabled]="loadingApprovalModal"
   type="button"
 >
-  <icon small>close</icon>
+  <bio-icon small>close</bio-icon>
 </button>
 <button
   bioButton
@@ -32,5 +32,5 @@
   (click)="openModalRequestChanges()"
   [disabled]="loadingRequestChangesModal"
 >
-  <icon small>sync_alt</icon>
+  <bio-icon small>sync_alt</bio-icon>
 </button>
