--- a/src/app/score/score-shared/score-approval/score-approval-actions-modal/score-approval-actions-modal.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval-actions-modal/score-approval-actions-modal.component.html
@@ -13,7 +13,7 @@
       [disabled]="loading"
       type="button"
     >
-      <icon large>check</icon>
+      <bio-icon large>check</bio-icon>
     </button>
   </div>
   <div class="button-wrapper">
@@ -27,7 +27,7 @@
       [disabled]="loading"
       type="button"
     >
-      <icon large>close</icon>
+      <bio-icon large>close</bio-icon>
     </button>
   </div>
   <div class="button-wrapper">
@@ -41,7 +41,7 @@
       (click)="openModalRequestChanges()"
       [disabled]="loading"
     >
-      <icon large>sync_alt</icon>
+      <bio-icon large>sync_alt</bio-icon>
     </button>
   </div>
 </bio-modal-content>
