--- a/src/app/shared/components/accordion/accordion-item.component.html
+++ b/src/app/shared/components/accordion/accordion-item.component.html
@@ -12,7 +12,7 @@
     <div class="accordion-item-title">{{ accordionTitle }}</div>
   </ng-template>
   <div class="accordion-item-icon">
-    <icon [@collapseIcon]="expanded ? 'expanded' : 'collapsed'">expand_less</icon>
+    <bio-icon [@collapseIcon]="expanded ? 'expanded' : 'collapsed'">expand_less</bio-icon>
   </div>
 </div>
 <div class="accordion-item-body" [bioCollapsed]="!expanded">
