--- a/src/app/shared/components/datepicker/calendar/calendar.component.html
+++ b/src/app/shared/components/datepicker/calendar/calendar.component.html
@@ -29,10 +29,10 @@
     </div>
     <div class="bio-calendar-actions">
       <button bioButton icon type="button" (click)="previous()" [disabled]="disabled">
-        <icon>keyboard_arrow_left</icon>
+        <bio-icon>keyboard_arrow_left</bio-icon>
       </button>
       <button bioButton icon type="button" (click)="next()" [disabled]="disabled">
-        <icon>keyboard_arrow_right</icon>
+        <bio-icon>keyboard_arrow_right</bio-icon>
       </button>
     </div>
   </div>
