--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -23,7 +23,7 @@
     [disabled]="!itemCount || currentPage === 1"
     tooltip="First page"
   >
-    <icon>first_page</icon>
+    <bio-icon>first_page</bio-icon>
   </button>
   <button
     bioButton
@@ -33,7 +33,7 @@
     [disabled]="!itemCount || currentPage === 1"
     tooltip="Previous page"
   >
-    <icon>chevron_left</icon>
+    <bio-icon>chevron_left</bio-icon>
   </button>
   <button
     bioButton
@@ -43,7 +43,7 @@
     [disabled]="!itemCount || currentPage === totalPages"
     tooltip="Next page"
   >
-    <icon>chevron_right</icon>
+    <bio-icon>chevron_right</bio-icon>
   </button>
   <button
     bioButton
@@ -53,6 +53,6 @@
     [disabled]="!itemCount || currentPage === totalPages"
     tooltip="Last page"
   >
-    <icon>last_page</icon>
+    <bio-icon>last_page</bio-icon>
   </button>
 </div>
