--- a/src/app/shared/components/select/select.component.html
+++ b/src/app/shared/components/select/select.component.html
@@ -1,6 +1,6 @@
 <div class="select-value" [class.placeholder]="!viewValue && placeholder" [innerHTML]="viewValue || placeholder"></div>
 <div class="select-icon">
-  <icon small>keyboard_arrow_down</icon>
+  <bio-icon small>keyboard_arrow_down</bio-icon>
 </div>
 <ng-template #panel>
   <div
