--- a/src/app/stlmpp/stlmpp.component.html
+++ b/src/app/stlmpp/stlmpp.component.html
@@ -29,19 +29,19 @@
     </div>
     <div class="links" id="links" [class.active]="fragment === 'links'" #fragment>
       <a bioButton href="https://github.com/stLmpp">
-        <icon [mdi]="mdiGithub"></icon>
+        <bio-icon [mdi]="mdiGithub"></bio-icon>
         Github
       </a>
       <a bioButton href="https://steamcommunity.com/id/stlmpp/">
-        <icon [mdi]="mdiSteam"></icon>
+        <bio-icon [mdi]="mdiSteam"></bio-icon>
         Steam
       </a>
       <a bioButton href="https://youtube.com/stLmpp">
-        <icon [mdi]="mdiYoutube"></icon>
+        <bio-icon [mdi]="mdiYoutube"></bio-icon>
         Youtube
       </a>
       <a bioButton routerLink="/player/p/stLmpp">
-        <icon>person</icon>
+        <bio-icon>person</bio-icon>
         My profile
       </a>
     </div>
