--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     ></bio-side-menu>
     <div class="brand-wrapper">
       <button bioButton icon type="button" (click)="toggleSideMenu($event)" *ngIf="user">
-        <icon>menu</icon>
+        <bio-icon>menu</bio-icon>
       </button>
       <a class="brand" routerLink="/"> Biomercs </a>
     </div>
@@ -23,19 +23,19 @@
           tooltipPosition="bottom"
           [tooltipDisabled]="!isMobile"
         >
-          <icon>add</icon>
+          <bio-icon>add</bio-icon>
           <ng-container *ngIf="!isMobile">Submit score</ng-container>
         </a>
         <button type="button" bioButton [menuTrigger]="menu">
-          <icon>person</icon>
+          <bio-icon>person</bio-icon>
           <ng-container *ngIf="!isMobile">{{ user.username }}</ng-container>
-          <icon class="triangle" [mdi]="mdiTriangle" [size]="8"></icon>
+          <bio-icon class="triangle" [mdi]="mdiTriangle" [size]="8"></bio-icon>
         </button>
         <bio-menu #menu>
-          <a bioButton menuItem [routerLink]="pathToProfile$ | async"> <icon>person</icon> Profile </a>
-          <a bioButton menuItem routerLink="/auth/change-password"> <icon>vpn_key</icon> Change password</a>
+          <a bioButton menuItem [routerLink]="pathToProfile$ | async"> <bio-icon>person</bio-icon> Profile </a>
+          <a bioButton menuItem routerLink="/auth/change-password"> <bio-icon>vpn_key</bio-icon> Change password</a>
           <button type="button" bioButton menuItem (click)="logout()">
-            <icon>logout</icon>
+            <bio-icon>logout</bio-icon>
             Logout
           </button>
         </bio-menu>
