--- a/src/app/score/score-world-record/score-world-records.component.html
+++ b/src/app/score/score-world-record/score-world-records.component.html
@@ -33,9 +33,9 @@
             >
               <div class="character" (click)="updateOrderByCharacter()">
                 Character
-                <icon class="order-icon" *ngIf="order.orderByCharacter" small>
+                <bio-icon class="order-icon" *ngIf="order.orderByCharacter" small>
                   {{ arrow }}
-                </icon>
+                </bio-icon>
               </div>
               <div
                 *ngFor="let stage of scoreTopTable.stages; trackBy: trackById"
@@ -44,9 +44,9 @@
                 class="stage"
               >
                 {{ stage.shortName }}
-                <icon class="order-icon" *ngIf="order.orderByStage === stage.id" small>
+                <bio-icon class="order-icon" *ngIf="order.orderByStage === stage.id" small>
                   {{ arrow }}
-                </icon>
+                </bio-icon>
               </div>
             </div>
           </ng-container>
