--- a/src/app/shared/components/modal/dialog/dialog.component.html
+++ b/src/app/shared/components/modal/dialog/dialog.component.html
@@ -1,9 +1,9 @@
 <bio-loading *ngIf="loading"></bio-loading>
 <h5 bioModalTitle *ngIf="data.title">
-  <icon *ngIf="!(data.type | any: typesWithoutIcon)" [ngSwitch]="data.type">
+  <bio-icon *ngIf="!(data.type | any: typesWithoutIcon)" [ngSwitch]="data.type">
     <ng-container *ngSwitchCase="dialogType.success">check_circle_outline</ng-container>
     <ng-container *ngSwitchCase="dialogType.error">highlight_off</ng-container>
-  </icon>
+  </bio-icon>
   {{ data.title }}
 </h5>
 <bio-modal-content [innerHTML]="data.content"></bio-modal-content>
