--- a/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
+++ b/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
@@ -16,7 +16,7 @@
           autocomplete="password"
           #inputPassword
         />
-        <button suffix bioButton icon type="button" (click)="hideOldPassword = !hideOldPassword">
+        <button bioSuffix bioButton icon type="button" (click)="hideOldPassword = !hideOldPassword">
           <bio-icon>{{ hideOldPassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
         <errors>
@@ -32,7 +32,7 @@
           autocomplete="new-password"
           #inputPassword
         />
-        <button suffix bioButton icon type="button" (click)="hidePassword = !hidePassword">
+        <button bioSuffix bioButton icon type="button" (click)="hidePassword = !hidePassword">
           <bio-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
         <errors>
@@ -49,7 +49,7 @@
           [type]="hideConfirmPassword ? 'password' : 'text'"
           autocomplete="off"
         />
-        <button suffix bioButton icon type="button" (click)="hideConfirmPassword = !hideConfirmPassword">
+        <button bioSuffix bioButton icon type="button" (click)="hideConfirmPassword = !hideConfirmPassword">
           <bio-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
         <errors>
