--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,7 +17,7 @@
           <error *error="'required'">Password is required</error>
         </errors>
         <button
-          suffix
+          bioSuffix
           bioButton
           icon
           type="button"
