--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -9,7 +9,7 @@
     autocomplete="off"
     (keydown.arrowDown)="accordionDirective?.focusKeyManager?.setFirstItemActive()"
   />
-  <bio-icon prefix>search</bio-icon>
+  <bio-icon bioPrefix>search</bio-icon>
 </form-field>
 
 <bio-accordion
