--- a/src/app/score/score-add/score-add-player/score-add-player.component.html
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.html
@@ -57,7 +57,7 @@
         type="button"
         bioButton
         icon
-        suffix
+        bioSuffix
         tooltip="Advanced search"
         (click)="openPlayerSearchModal()"
         [disabled]="playerSearchModalLoading"
