--- a/src/app/score/score-add/score-add.component.html
+++ b/src/app/score/score-add/score-add.component.html
@@ -72,7 +72,7 @@
             [bioDatepicker]="datepicker"
             placeholder="Achieved date"
           />
-          <button bioButton icon suffix [bioDatepickerTrigger]="datepicker">
+          <button bioButton icon bioSuffix [bioDatepickerTrigger]="datepicker">
             <bio-icon>calendar_today</bio-icon>
           </button>
           <bio-datepicker #datepicker></bio-datepicker>
