--- a/src/app/shared/components/list/list-item.component.html
+++ b/src/app/shared/components/list/list-item.component.html
@@ -11,8 +11,8 @@
   tabindex="-1"
   *ngIf="listParentControl && value"
 />
-<ng-content select="[prefix]"></ng-content>
+<ng-content select="[bioPrefix]"></ng-content>
 <div class="list-item-content">
   <ng-content></ng-content>
 </div>
-<ng-content select="[suffix]"></ng-content>
+<ng-content select="[bioSuffix]"></ng-content>
